# Tablerreur

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  PROMPT_MAPALA_INTEGRATION.md  PROMPT_VISIBILITE_ERREURS.md  README.md  SPEC.md  cursorrules  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-web.txt  run.py  tablerreur-backend.spec
docs/: AGENT_README.md  BACKLOG_TAURI.md  PROMPTS_ETAPES.md  architecture.md  build-windows.md  column_config_audit.md  deployment-security.md  formats.md  glossaire_ui_fr.md  nakala-template-matching.md  nakala-validation-formats.md  nakala.md  nakala_vocab_audit.md  type-format-mapping.md  ux.md  web_parity.md
examples/: sample_dataset.csv
scripts/: bootstrap_dev.py  build_portable_exe.py  build_sidecar.py  check_english_strings.py  generate_icon.py  generate_language_codes.py
src-tauri/: Cargo.toml  tauri.conf.json
tests/: conftest.py  test_coar_mapping.py  test_commands.py  test_content_type.py  test_curation_helpers.js  test_engine.py  test_export.py  test_format_compat_helpers.js  test_format_detection.py  test_import.py  test_mapala_upload_limit.py  test_nakala_api.py  test_nakala_dcterms.py  test_nakala_template_match_helpers.js  test_nakala_vocab_helpers.js  test_patch.py  test_rules.py  test_similar_values.py  test_special_values.py  test_template.py  test_web_curation.py  test_web_detect_format.py  test_web_issue_status.py  test_web_job_template_patch.py  test_web_nakala_overlay.py  test_web_preview_rule.py  test_web_template_roundtrip.py  test_web_vocabulary_import.py  (+2 more)
(+102 files in other folders)
